syntax = "proto3";

import "commands.proto";

option java_multiple_files = true;
option java_package = "rocks.inspectit.ocelot.grpc";
option java_outer_classname = "CommandsService";

service Commands {

  rpc AskForCommands(stream CommandResponse) returns (stream Command);

}